--- a/KmmPokedex/androidApp/src/main/AndroidManifest.xml
+++ b/KmmPokedex/androidApp/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:allowBackup="false"
+        android:name=".PokedexApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
